# latentlens

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  RELEASE_PROGRESS.md  pyproject.toml  quickstart.py
latentlens/: __init__.py  extract.py  index.py  models.py
molmo/: __init__.py  checkpoint.py  cli.py  config.py  hf_molmo.py  image_vit.py  model.py  safetensors_util.py  train.py
molmo/analysis/: __init__.py
molmo/data/: __init__.py  academic_datasets.py  collator.py  data_formatter.py  download_urls.py  iterable_dataset_mixture.py  pixmo_datasets.py  preprocessor.py
molmo/eval/: __init__.py  loss_evaluator.py
molmo/visualization/: __init__.py
reproduce/: run_all.sh  step0_train.sh  step1_download.sh  step2_extract_contextual.sh  step3_run_analysis.sh
reproduce/configs/: llama-dino.yaml  llama-siglip.yaml  llama-vit.yaml  olmo-dino.yaml  olmo-siglip.yaml  olmo-vit.yaml  qwen-dino.yaml  qwen-siglip.yaml  qwen-vit.yaml
reproduce/scripts/: convert_pretrained.py  extract_all_connectors.py  extract_connector.py  extract_embeddings.py  run_embedding_lens.py  run_latentlens.py  run_logitlens.py  train_connector.py
reproduce/scripts/evaluate/: __init__.py  aggregate_results.py  evaluate_interpretability.py  prompts.py  utils.py
scripts/: build_precomputed_index.py
tests/: conftest.py  corpus_100.txt  test_connector_equivalence.py  test_connector_loading.py  test_contextual_embeddings.py  test_download.py  test_embedding_lens_output.py  test_end_to_end.py  test_evaluate.py  test_evaluate_imports.py  test_golden_values.py  test_imports.py  test_latentlens_extract.py  test_latentlens_index.py  test_latentlens_models.py  test_latentlens_output.py  test_logitlens_output.py  test_model_inference.py  test_paper_results.py  test_reproduction.py  test_shell_script_args.py  test_single_gpu.py  test_user_e2e.py
